[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Level/Level1/Level1Background.png" type="Texture" id=1]
[ext_resource path="res://Objects/Barracuda.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Test.gd" type="Script" id=3]
[ext_resource path="res://Objects/Passive/XPOrb.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Passive/MiscBlob1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/CaveWallsTilemap.tres" type="TileSet" id=6]

[node name="TestScene" type="Node2D"]
script = ExtResource( 3 )
particles_layer = NodePath("ParticlesLayer")
enemy_layer = NodePath("Enemies")
orb_layer = NodePath("OrbLayer")
projectile_layer = NodePath("ProjectileLayer")

[node name="StaticSprites" type="Node2D" parent="."]

[node name="Background" type="Sprite" parent="StaticSprites"]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
centered = false

[node name="BaseNavigation" type="Navigation2D" parent="."]

[node name="CaveTilemap" type="TileMap" parent="BaseNavigation" groups=["CaveWalls"]]
tile_set = ExtResource( 6 )
cell_size = Vector2( 360, 360 )
cell_custom_transform = Transform2D( 360, 0, 0, 360, 0, 0 )
collision_bounce = 1.0
collision_layer = 128
format = 1
tile_data = PoolIntArray( -65536, 0, 458753, -65535, 0, 262147, -65534, 0, 262151, -65533, 0, 262151, -65532, 0, 7, -65531, 0, 262147, -65530, 0, 262147, -65529, 0, 7, -65528, 0, 7, -65527, 0, 7, -65526, 0, 3, -65525, 0, 262147, -65524, 0, 262147, -65523, 0, 3, -65522, 0, 7, -65521, 0, 3, -65520, 0, 3, -65519, 0, 262151, -65518, 0, 262147, -65517, 0, 262147, -65516, 0, 3, -65515, 0, 3, -65514, 0, 7, -65513, 0, 3, -65512, 0, 3, -65511, 0, 7, -65510, 0, 262151, -65509, 0, 3, -65508, 0, 262147, -65507, 0, 3, -65506, 0, 3, -65505, 0, 262148, 0, 0, 131072, 1, 0, 131077, 2, 0, 393221, 3, 0, 131073, 4, 0, 131077, 5, 0, 131073, 6, 0, 131073, 7, 0, 131077, 8, 0, 131077, 9, 0, 393217, 10, 0, 393217, 11, 0, 131077, 12, 0, 131073, 13, 0, 393217, 14, 0, 393217, 15, 0, 393221, 16, 0, 131077, 17, 0, 393217, 18, 0, 131073, 19, 0, 131073, 20, 0, 131077, 21, 0, 131074, 22, 0, 65542, 23, 0, 327682, 24, 0, 327682, 25, 0, 65538, 26, 0, 65538, 27, 0, 65538, 28, 0, 65538, 29, 0, 65538, 30, 0, 327686, 31, 0, 131079, 65557, 0, 131072, 65558, 0, 131077, 65559, 0, 393221, 65560, 0, 131073, 65561, 0, 131077, 65562, 0, 131074, 65563, 0, 65538, 65564, 0, 65542, 65565, 0, 65542, 65566, 0, 65542, 65567, 0, 131075, 131072, 0, 458753, 131073, 0, 0, 131078, 0, 458753, 131079, 0, 262148, 131098, 0, 262149, 131099, 0, 327686, 131100, 0, 327686, 131101, 0, 327682, 131102, 0, 327686, 131103, 0, 131079, 196608, 0, 5, 196609, 0, 131075, 196613, 0, 196609, 196614, 0, 65537, 196615, 0, 2, 196616, 0, 3, 196617, 0, 0, 196623, 0, 196613, 196624, 0, 262151, 196625, 0, 262151, 196626, 0, 4, 196633, 0, 196609, 196634, 0, 327685, 196635, 0, 65542, 196636, 0, 327686, 196637, 0, 65538, 196638, 0, 65538, 196639, 0, 131075, 262144, 0, 262149, 262145, 0, 393223, 262148, 0, 458753, 262149, 0, 327681, 262150, 0, 65542, 262151, 0, 327683, 262152, 0, 393221, 262153, 0, 196615, 262159, 0, 5, 262160, 0, 327682, 262161, 0, 65538, 262162, 0, 262150, 262163, 0, 7, 262164, 0, 262148, 262169, 0, 262145, 262170, 0, 327682, 262171, 0, 327687, 262172, 0, 131077, 262173, 0, 393221, 262174, 0, 131074, 262175, 0, 262150, 262176, 0, 262151, 262177, 0, 3, 262178, 0, 262147, 262179, 0, 3, 262180, 0, 4, 327680, 0, 5, 327681, 0, 131079, 327684, 0, 393216, 327685, 0, 393221, 327686, 0, 393222, 327687, 0, 393223, 327695, 0, 1, 327696, 0, 327682, 327697, 0, 65542, 327698, 0, 327686, 327699, 0, 327686, 327700, 0, 2, 327701, 0, 262151, 327702, 0, 7, 327703, 0, 7, 327704, 0, 262151, 327705, 0, 327681, 327706, 0, 65543, 327707, 0, 196611, 327710, 0, 393220, 327711, 0, 131073, 327712, 0, 131077, 327713, 0, 393221, 327714, 0, 393222, 327715, 0, 327682, 327716, 0, 262146, 327717, 0, 262148, 393216, 0, 262149, 393217, 0, 393223, 393222, 0, 131076, 393223, 0, 65536, 393224, 0, 0, 393230, 0, 196609, 393231, 0, 65537, 393232, 0, 65538, 393233, 0, 65542, 393234, 0, 65542, 393235, 0, 327682, 393236, 0, 65538, 393237, 0, 327682, 393238, 0, 65542, 393239, 0, 65542, 393240, 0, 65542, 393241, 0, 327683, 393242, 0, 196615, 393250, 0, 262145, 393251, 0, 65538, 393252, 0, 65538, 393253, 0, 262146, 393254, 0, 262148, 458752, 0, 262149, 458753, 0, 262150, 458754, 0, 7, 458755, 0, 262148, 458759, 0, 131076, 458760, 0, 458755, 458766, 0, 5, 458767, 0, 327686, 458768, 0, 327682, 458769, 0, 327682, 458770, 0, 327682, 458771, 0, 65538, 458772, 0, 65538, 458773, 0, 65542, 458774, 0, 65542, 458775, 0, 327682, 458776, 0, 65543, 458777, 0, 458755, 458786, 0, 393216, 458787, 0, 393217, 458788, 0, 393218, 458789, 0, 65538, 458790, 0, 131075, 524288, 0, 262145, 524289, 0, 65542, 524290, 0, 65538, 524291, 0, 262150, 524292, 0, 0, 524300, 0, 196613, 524301, 0, 262151, 524302, 0, 65541, 524303, 0, 65538, 524304, 0, 327682, 524305, 0, 65538, 524306, 0, 65538, 524307, 0, 65542, 524308, 0, 65542, 524309, 0, 327682, 524310, 0, 65538, 524311, 0, 65543, 524312, 0, 458759, 524320, 0, 196609, 524321, 0, 262148, 524324, 0, 1, 524325, 0, 65542, 524326, 0, 131079, 589824, 0, 5, 589825, 0, 327682, 589826, 0, 327686, 589827, 0, 65538, 589828, 0, 2, 589829, 0, 4, 589835, 0, 196609, 589836, 0, 327681, 589837, 0, 327682, 589838, 0, 65538, 589839, 0, 327683, 589840, 0, 393221, 589841, 0, 131074, 589842, 0, 65542, 589843, 0, 327682, 589844, 0, 65542, 589845, 0, 327682, 589846, 0, 65538, 589847, 0, 393219, 589852, 0, 458753, 589853, 0, 262147, 589854, 0, 262147, 589855, 0, 3, 589856, 0, 65541, 589857, 0, 393219, 589860, 0, 262149, 589861, 0, 65542, 589862, 0, 131075, 655360, 0, 262149, 655361, 0, 65542, 655362, 0, 65538, 655363, 0, 65538, 655364, 0, 65538, 655365, 0, 131075, 655371, 0, 393220, 655372, 0, 131078, 655373, 0, 327686, 655374, 0, 65538, 655375, 0, 393223, 655377, 0, 131076, 655378, 0, 131074, 655379, 0, 65542, 655380, 0, 327686, 655381, 0, 327682, 655382, 0, 327682, 655383, 0, 262146, 655384, 0, 4, 655388, 0, 262145, 655389, 0, 65542, 655390, 0, 65542, 655391, 0, 65538, 655392, 0, 65539, 655393, 0, 458755, 655396, 0, 1, 655397, 0, 327686, 655398, 0, 393223, 720896, 0, 262145, 720897, 0, 65542, 720898, 0, 65538, 720899, 0, 65542, 720900, 0, 327682, 720901, 0, 6, 720902, 0, 262151, 720903, 0, 4, 720908, 0, 393220, 720909, 0, 131078, 720910, 0, 65542, 720911, 0, 131079, 720914, 0, 131076, 720915, 0, 131074, 720916, 0, 327682, 720917, 0, 327682, 720918, 0, 327682, 720919, 0, 65542, 720920, 0, 393223, 720923, 0, 196609, 720924, 0, 327685, 720925, 0, 65542, 720926, 0, 65538, 720927, 0, 65539, 720928, 0, 196615, 720932, 0, 131076, 720933, 0, 393218, 720934, 0, 131075, 786432, 0, 262145, 786433, 0, 327682, 786434, 0, 327682, 786435, 0, 65538, 786436, 0, 65538, 786437, 0, 65538, 786438, 0, 65538, 786439, 0, 262150, 786440, 0, 262151, 786441, 0, 262148, 786445, 0, 5, 786446, 0, 327683, 786447, 0, 196615, 786451, 0, 262145, 786452, 0, 327686, 786453, 0, 65542, 786454, 0, 327686, 786455, 0, 327686, 786456, 0, 131079, 786459, 0, 262149, 786460, 0, 65538, 786461, 0, 327683, 786462, 0, 131073, 786463, 0, 196615, 786469, 0, 262149, 786470, 0, 393223, 851968, 0, 262145, 851969, 0, 65542, 851970, 0, 65542, 851971, 0, 65538, 851972, 0, 327686, 851973, 0, 65542, 851974, 0, 327682, 851975, 0, 327686, 851976, 0, 327686, 851977, 0, 131079, 851981, 0, 393216, 851982, 0, 196615, 851987, 0, 5, 851988, 0, 65542, 851989, 0, 65542, 851990, 0, 65542, 851991, 0, 327683, 851992, 0, 458759, 851995, 0, 131076, 851996, 0, 131073, 851997, 0, 196611, 852005, 0, 262149, 852006, 0, 131075, 917504, 0, 262145, 917505, 0, 327682, 917506, 0, 327682, 917507, 0, 327686, 917508, 0, 65542, 917509, 0, 327686, 917510, 0, 65542, 917511, 0, 65538, 917512, 0, 327686, 917513, 0, 6, 917514, 0, 4, 917520, 0, 458753, 917521, 0, 4, 917523, 0, 1, 917524, 0, 327686, 917525, 0, 327682, 917526, 0, 65542, 917527, 0, 131079, 917541, 0, 5, 917542, 0, 131075, 983040, 0, 262149, 983041, 0, 65538, 983042, 0, 65542, 983043, 0, 327686, 983044, 0, 327682, 983045, 0, 65542, 983046, 0, 65538, 983047, 0, 327686, 983048, 0, 65542, 983049, 0, 327682, 983050, 0, 393219, 983055, 0, 458757, 983056, 0, 458758, 983057, 0, 196615, 983059, 0, 262145, 983060, 0, 65542, 983061, 0, 65538, 983062, 0, 327683, 983063, 0, 458759, 983065, 0, 458757, 983066, 0, 3, 983067, 0, 7, 983068, 0, 3, 983069, 0, 262151, 983070, 0, 262147, 983071, 0, 3, 983072, 0, 262151, 983073, 0, 4, 983077, 0, 262149, 983078, 0, 393223, 1048576, 0, 262145, 1048577, 0, 65542, 1048578, 0, 327682, 1048579, 0, 327682, 1048580, 0, 65542, 1048581, 0, 65538, 1048582, 0, 65542, 1048583, 0, 65538, 1048584, 0, 65538, 1048585, 0, 327682, 1048586, 0, 393219, 1048591, 0, 131076, 1048592, 0, 196611, 1048595, 0, 262145, 1048596, 0, 65543, 1048597, 0, 131073, 1048598, 0, 196611, 1048601, 0, 131076, 1048602, 0, 131074, 1048603, 0, 65542, 1048604, 0, 327686, 1048605, 0, 65538, 1048606, 0, 327682, 1048607, 0, 65542, 1048608, 0, 65542, 1048609, 0, 2, 1048610, 0, 0, 1048613, 0, 262145, 1048614, 0, 131075, 1114112, 0, 1, 1114113, 0, 327686, 1114114, 0, 327686, 1114115, 0, 65542, 1114116, 0, 327682, 1114117, 0, 65542, 1114118, 0, 65542, 1114119, 0, 65538, 1114120, 0, 65538, 1114121, 0, 65542, 1114122, 0, 2, 1114123, 0, 0, 1114131, 0, 393220, 1114132, 0, 196615, 1114138, 0, 131076, 1114139, 0, 131077, 1114140, 0, 131077, 1114141, 0, 393217, 1114142, 0, 131073, 1114143, 0, 393217, 1114144, 0, 393218, 1114145, 0, 65538, 1114146, 0, 393223, 1114149, 0, 262145, 1114150, 0, 393223, 1179648, 0, 262145, 1179649, 0, 327686, 1179650, 0, 65542, 1179651, 0, 327686, 1179652, 0, 65538, 1179653, 0, 327682, 1179654, 0, 65538, 1179655, 0, 327682, 1179656, 0, 327682, 1179657, 0, 65538, 1179658, 0, 327682, 1179659, 0, 262146, 1179660, 0, 262147, 1179661, 0, 262148, 1179680, 0, 5, 1179681, 0, 327686, 1179682, 0, 2, 1179683, 0, 262148, 1179685, 0, 262149, 1179686, 0, 131075, 1245184, 0, 1, 1245185, 0, 327682, 1245186, 0, 65542, 1245187, 0, 65538, 1245188, 0, 65542, 1245189, 0, 65538, 1245190, 0, 65538, 1245191, 0, 65543, 1245192, 0, 131073, 1245193, 0, 131074, 1245194, 0, 327682, 1245195, 0, 327686, 1245196, 0, 65538, 1245197, 0, 6, 1245198, 0, 262147, 1245199, 0, 7, 1245200, 0, 262151, 1245201, 0, 0, 1245216, 0, 393216, 1245217, 0, 131077, 1245218, 0, 393217, 1245219, 0, 458759, 1245221, 0, 262149, 1245222, 0, 131075, 1310720, 0, 5, 1310721, 0, 327686, 1310722, 0, 65538, 1310723, 0, 65538, 1310724, 0, 327683, 1310725, 0, 393221, 1310726, 0, 131077, 1310727, 0, 196615, 1310729, 0, 262149, 1310730, 0, 327682, 1310731, 0, 65542, 1310732, 0, 65542, 1310733, 0, 327686, 1310734, 0, 65542, 1310735, 0, 65542, 1310736, 0, 65539, 1310737, 0, 458759, 1310742, 0, 458753, 1310743, 0, 7, 1310744, 0, 262147, 1310745, 0, 262151, 1310746, 0, 262147, 1310747, 0, 3, 1310748, 0, 262151, 1310749, 0, 7, 1310750, 0, 4, 1310757, 0, 1, 1310758, 0, 131079, 1376256, 0, 1, 1376257, 0, 327682, 1376258, 0, 65543, 1376259, 0, 131077, 1376260, 0, 458755, 1376265, 0, 5, 1376266, 0, 65543, 1376267, 0, 131073, 1376268, 0, 393218, 1376269, 0, 65538, 1376270, 0, 327687, 1376271, 0, 393217, 1376272, 0, 458759, 1376278, 0, 262145, 1376279, 0, 65538, 1376280, 0, 65542, 1376281, 0, 65542, 1376282, 0, 327682, 1376283, 0, 65538, 1376284, 0, 327682, 1376285, 0, 65539, 1376286, 0, 458759, 1376293, 0, 1, 1376294, 0, 393223, 1441792, 0, 1, 1441793, 0, 65543, 1441794, 0, 458759, 1441797, 0, 458753, 1441798, 0, 262147, 1441799, 0, 0, 1441801, 0, 393216, 1441802, 0, 196611, 1441804, 0, 262145, 1441805, 0, 65543, 1441806, 0, 196615, 1441810, 0, 458753, 1441811, 0, 262148, 1441814, 0, 5, 1441815, 0, 65542, 1441816, 0, 65542, 1441817, 0, 327686, 1441818, 0, 327682, 1441819, 0, 327682, 1441820, 0, 65538, 1441821, 0, 131075, 1441829, 0, 5, 1441830, 0, 131079, 1507328, 0, 262145, 1507329, 0, 393223, 1507332, 0, 196609, 1507333, 0, 327681, 1507334, 0, 327682, 1507335, 0, 131079, 1507340, 0, 5, 1507341, 0, 131075, 1507345, 0, 458753, 1507346, 0, 65541, 1507347, 0, 393219, 1507350, 0, 393220, 1507351, 0, 393222, 1507352, 0, 327682, 1507353, 0, 327682, 1507354, 0, 65538, 1507355, 0, 327682, 1507356, 0, 327683, 1507357, 0, 458755, 1507364, 0, 196609, 1507365, 0, 65537, 1507366, 0, 131075, 1572864, 0, 5, 1572865, 0, 393223, 1572867, 0, 196609, 1572868, 0, 65541, 1572869, 0, 65538, 1572870, 0, 65543, 1572871, 0, 458755, 1572876, 0, 131072, 1572877, 0, 458759, 1572879, 0, 458757, 1572880, 0, 262147, 1572881, 0, 327681, 1572882, 0, 327686, 1572883, 0, 131075, 1572887, 0, 262145, 1572888, 0, 65542, 1572889, 0, 327686, 1572890, 0, 327682, 1572891, 0, 65543, 1572892, 0, 196615, 1572898, 0, 458753, 1572899, 0, 262151, 1572900, 0, 65541, 1572901, 0, 65542, 1572902, 0, 131079, 1638400, 0, 5, 1638401, 0, 6, 1638402, 0, 7, 1638403, 0, 65537, 1638404, 0, 65542, 1638405, 0, 65542, 1638406, 0, 131075, 1638408, 0, 458757, 1638409, 0, 262151, 1638410, 0, 262148, 1638415, 0, 262149, 1638416, 0, 327686, 1638417, 0, 65538, 1638418, 0, 327686, 1638419, 0, 131079, 1638423, 0, 5, 1638424, 0, 65538, 1638425, 0, 65538, 1638426, 0, 65542, 1638427, 0, 131075, 1638433, 0, 196609, 1638434, 0, 327685, 1638435, 0, 327682, 1638436, 0, 65542, 1638437, 0, 327686, 1638438, 0, 393219, 1703936, 0, 262145, 1703937, 0, 65538, 1703938, 0, 327686, 1703939, 0, 65538, 1703940, 0, 327682, 1703941, 0, 65538, 1703942, 0, 2, 1703943, 0, 262151, 1703944, 0, 65541, 1703945, 0, 65542, 1703946, 0, 6, 1703947, 0, 3, 1703948, 0, 3, 1703949, 0, 7, 1703950, 0, 3, 1703951, 0, 327681, 1703952, 0, 327686, 1703953, 0, 65538, 1703954, 0, 65543, 1703955, 0, 458759, 1703959, 0, 393220, 1703960, 0, 131078, 1703961, 0, 327682, 1703962, 0, 327686, 1703963, 0, 262150, 1703964, 0, 3, 1703965, 0, 7, 1703966, 0, 262151, 1703967, 0, 3, 1703968, 0, 3, 1703969, 0, 65541, 1703970, 0, 65538, 1703971, 0, 65538, 1703972, 0, 327686, 1703973, 0, 65542, 1703974, 0, 131075, 1769472, 0, 393216, 1769473, 0, 393221, 1769474, 0, 131077, 1769475, 0, 393217, 1769476, 0, 131073, 1769477, 0, 393217, 1769478, 0, 393217, 1769479, 0, 131077, 1769480, 0, 131077, 1769481, 0, 131077, 1769482, 0, 131077, 1769483, 0, 393221, 1769484, 0, 393217, 1769485, 0, 393217, 1769486, 0, 131077, 1769487, 0, 393221, 1769488, 0, 131077, 1769489, 0, 131077, 1769490, 0, 458759, 1769496, 0, 393220, 1769497, 0, 131073, 1769498, 0, 393217, 1769499, 0, 393221, 1769500, 0, 131073, 1769501, 0, 131077, 1769502, 0, 393217, 1769503, 0, 393221, 1769504, 0, 393217, 1769505, 0, 393221, 1769506, 0, 131077, 1769507, 0, 131077, 1769508, 0, 393217, 1769509, 0, 393217, 1769510, 0, 196615 )

[node name="Enemies" type="Node2D" parent="."]
position = Vector2( 9301, 6940 )

[node name="MiscBlob1" parent="Enemies" instance=ExtResource( 5 )]
position = Vector2( 2724, 1143 )

[node name="MiscBlob2" parent="Enemies" instance=ExtResource( 5 )]
position = Vector2( 2874, 977 )

[node name="MiscBlob3" parent="Enemies" instance=ExtResource( 5 )]
position = Vector2( 2482, 988 )

[node name="BarracudaCollection" type="Node2D" parent="."]

[node name="BarracudaJoints" type="Node2D" parent="BarracudaCollection"]
position = Vector2( -1000, -1000 )

[node name="BarracudaSegments" type="Node2D" parent="BarracudaCollection"]
position = Vector2( -1000, -1000 )

[node name="Barracuda" parent="BarracudaCollection" instance=ExtResource( 2 )]

[node name="ProjectileLayer" type="Node2D" parent="."]

[node name="EnemyProjectileLayer2" type="Node2D" parent="ProjectileLayer"]

[node name="PlayerProjectileLayer" type="Node2D" parent="ProjectileLayer"]

[node name="OrbLayer" type="Node2D" parent="."]

[node name="XPOrb" parent="OrbLayer" instance=ExtResource( 4 )]
position = Vector2( 3904, 681 )

[node name="BigOrb1" parent="OrbLayer" instance=ExtResource( 4 )]
position = Vector2( 10775, 2570 )
orb_modulation = Color( 0, 0.0156863, 1, 1 )
value = 200

[node name="BigOrb2" parent="OrbLayer" instance=ExtResource( 4 )]
position = Vector2( 897, 8828 )
orb_modulation = Color( 0, 0.0156863, 1, 1 )
value = 200

[node name="BigOrb3" parent="OrbLayer" instance=ExtResource( 4 )]
position = Vector2( 10412, 9180 )
orb_modulation = Color( 0, 0.0156863, 1, 1 )
value = 200

[node name="ParticlesLayer" type="Node2D" parent="."]
position = Vector2( 9068, 5288 )
z_index = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VelocityLabel" type="Label" parent="CanvasLayer"]
margin_left = 9.0
margin_top = 7.0
margin_right = 49.0
margin_bottom = 21.0
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DataLabel" type="Label" parent="CanvasLayer"]
margin_left = 8.0
margin_top = 26.0
margin_right = 48.0
margin_bottom = 40.0
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnPoints" type="Node2D" parent="."]
